--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-body {
-  max-width: 1400px;
-  margin: 0 auto;
-}
-
 * {
   box-sizing: border-box;
   margin: 0;
@@ -10,55 +5,8 @@ body {
   font-family: Inter, sans-serif;
 }
 
-.main {
-  position: fixed;
-  top: 0;
-  left: 0;
-  position: relative;
-  width: 1400px;
-  height: 900px;
-  background-color: #111111;
-}
+body {
+  margin: 0 auto;
 
-.men-block {
-  position: absolute;
-  top: 0;
-  right: 0;
-  z-index: 1;
-}
-
-.text-block {
-  position: absolute;
-  top: 236px;
-  left: 80px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  width: 571px;
-  height: 309px;
-  z-index: 2;
-}
-
-.text-block-title {
-  font-size: 64px;
-  font-weight: bold;
-  color: #ffffff;
-}
-
-.text-block-text {
-  margin-bottom: 48px;
-  color: #a8b3c1;
-}
-
-.text-block-button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 240px;
-  height: 54px;
-  background-color: #4744c9;
-  font-size: 18px;
-  line-height: 27px;
-  border-radius: 6px;
-  color: #ffffff;
+  background-color: #ffffff;
 }
