--- a/about.css
+++ b/about.css
@@ -1,34 +1,57 @@
 .about {
-  padding: 120px 0;
+  position: relative;
+  width: 100%;
+  max-width: 1400px;
+  margin: 0 auto;
+  padding: 120px 170px;
+  background-color: #000000;
+
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 1400px;
-  height: 1086px;
-  background-color: #000000;
 }
 
 .about-title {
   margin-bottom: 24px;
-  font-size: 48px;
+  font-size: 36px;
   font-weight: bold;
   color: #ffffff;
+  text-align: center;
 }
 
 .about-text {
-  margin-bottom: 48px;
-  width: 1000px;
-  height: 116px;
-  font-size: 20px;
+  max-width: 1000px;
+  margin-bottom: 32px;
+  font-size: 18px;
+  line-height: 28px;
   color: #a7a7ac;
-  font-weight: 500;
+  text-align: center;
 }
 
 .about-video {
+  max-width: 100%;
+  width: 1060px;
+  height: auto;
 }
 
 .about-img {
-  position: relative;
-  bottom: 74px;
-  left: -360px;
+  position: absolute;
+  bottom: 42px;
+  left: 107px;
+  display: flex;
+  align-items: center;
+}
+
+.about-img img:nth-child(1) {
+  width: 90px;
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
+
+.about-img img:nth-child(2) {
+  width: 359px;
+  max-width: 100%;
+  height: 23px;
+  display: block;
 }
