--- a/header.css
+++ b/header.css
@@ -1,45 +1,50 @@
 .header {
+  width: 100%;
+  max-width: 1400px;
+  margin: 0 auto;
+  position: fixed;
+
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  height: 60px;
+  background-color: #111217;
   display: flex;
   align-items: center;
-  background-color: #111217;
-  height: 60px;
-  width: 1400px;
-  position: fixed;
-  top: 0;
-  z-index: 1000;
+  padding: 0 20px;
 }
 
 .header-logo {
-  margin-left: 52px;
   width: 70px;
   height: 80px;
 }
+
+.header-logo img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
+
 .header-nav-list {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  padding: 0;
-  margin: 0;
-  margin-left: 135.5px;
-  width: 815px;
-  height: 60px;
   list-style: none;
+  margin-left: 50px;
 }
 
 .header-nav-item {
   display: flex;
   align-items: center;
-  height: 16px;
+  margin-right: 24px;
+  position: relative;
 }
+
 .header-nav-link {
-  display: flex;
-  align-items: center;
-  height: 16px;
   color: #ffffff;
   text-decoration: none;
   font-size: 12px;
-  font-weight: 400;
   line-height: 27px;
+  margin-right: 5px;
 }
 
 .header-nav-link-button {
@@ -48,17 +53,22 @@
   border-radius: 4px;
   font-size: 12px;
   font-weight: bold;
-}
-
-.header-nav-link-arrow {
-  padding: 0;
-  border: 0;
-  width: 16px;
-  height: 16px;
-  background-color: #111217;
   cursor: pointer;
 }
 
+.header-nav-link-arrow {
+  width: 16px;
+  height: 16px;
+  background-color: transparent;
+  border: 0;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .header-nav-item--phone {
-  margin-left: 135.5px;
+  margin-left: auto;
+  display: flex;
+  align-items: center;
 }
