--- a/header.css
+++ b/header.css
@@ -1,17 +1,16 @@
 .header {
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
   width: 100%;
   max-width: 1400px;
-  margin: 0 auto;
-  position: fixed;
-
-  top: 0;
-  /* left: 0; */
-  z-index: 1000;
+  padding: 0 20px;
   height: 60px;
   background-color: #111217;
   display: flex;
   align-items: center;
-  padding: 0 20px;
+  z-index: 1000;
 }
 
 .header-logo {
